# Jeeves4Service

./: .env.example  README.md  requirements.txt  start_services.py  tree.py
services/property_service/: main.py  pyproject.toml  requirements.txt
services/property_service/alembic/: env.py
services/property_service/alembic/versions/: 9397cb79870d_adding_storage_table.py  9bb4c9329d9d_adding_schemas_and_renaming_tables.py  9bebe894199c_initial_versioning_with_schema_for_.py  a2e52a662590_renaming_column_in_storage.py  daac337c4772_adding_storage.py  e4eb2bfef818_adding_locationpath_table.py  f3e6d0c100f8_initial_property_migration.py
services/property_service/app/: __init__.py  config.py
services/property_service/app/core/: __init__.py  logger.py
services/property_service/app/db/: __init__.py  base.py  session.py
services/property_service/app/di/: __init__.py  containers.py
services/property_service/app/dto/: __init__.py  property.py  storage.py
services/property_service/app/models/: __init__.py  property.py  storage.py
services/property_service/app/services/: __init__.py  add_main_storage.py  add_property.py  add_rooms.py  add_storage.py  add_users_property.py  get_property.py  get_rooms.py  get_storage.py  update_property.py  update_room.py
services/property_service/routes/: property.py  storage.py
services/property_service/tests/: __init__.py  test_add_main_storage.py  test_add_property.py  test_add_rooms.py  test_add_rooms_fixed.py  test_add_storage.py  test_add_users_property.py  test_get_property.py  test_get_rooms.py  test_get_storage.py  test_update_property.py  test_update_room.py
services/shared/j4s_crypto_lib/: password_processor.py  pyproject.toml
services/user_service/: main.py  pyproject.toml  requirements.txt
services/user_service/alembic/: env.py
services/user_service/alembic/versions/: 466366336567_removing_family_table.py  517c5d0cfa78_adding_storage.py  74a51fc18cef_adding_property_association_table.py  c5a5c59675ed_deleting_older_revisions_and_adding_.py  deaedb131bd6_initial_migration_user_service.py
services/user_service/app/: config.py  example_di_usage.py
services/user_service/routes/: users.py
services/user_service/tests/: test_invite_user.py
(+74 files in other folders)
